CNDE-2809: refactor extractUid, unit tests